--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <meta name="google-site-verification" content="UPdjyG6vmBacXQ3T9QH_o_MVwXPz7YsrdibXUFRgj9E" />
     <link rel="stylesheet" href="style.css">
     <title>Dictionary</title>
 </head>
